<span class="ribbon-inner">             <p>空教室</p>           </span>

--- a/work/index.html
+++ b/work/index.html
@@ -82,7 +82,16 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>CLASS TABLE BY LJH</p>
+            <p>课程查询</p>
+          </span>
+          <span class="ribbon-inner">
+            <p>空教室</p>
+          </span>
+          <span class="ribbon-inner">
+            <p>笔记</p>
+          </span>
+          <span class="ribbon-inner">
+            <p>李佳慧的课表</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
