Signed-off-by: xyhljh <280759785@qq.com>

--- a/work/index.html
+++ b/work/index.html
@@ -91,7 +91,7 @@
             <p>笔记</p>
           </span>
           <span class="ribbon-inner" id="myTable">
-            <p>李佳慧的课表</p>
+            <p>个人课表</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
