Signed-off-by: xyhljh <280759785@qq.com>

--- a/work/李佳慧的课表.html
+++ b/work/李佳慧的课表.html
@@ -22,7 +22,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Class</h1>
-            <h2>My table</h2>
+            <h2>class table</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -39,7 +39,7 @@
 
 
       <section id="class_table">
-      <h1 class="center">个人课表</h1>
+      <h1 class="center">李佳慧个人课表</h1>
       <table id="this_table">
         <tr>
           <th><p>一</p></th>
@@ -91,7 +91,7 @@
             <p>笔记</p>
           </span>
           <span class="ribbon-inner" id="myTable">
-            <p>个人课表</p>
+            <p>李佳慧的课表</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
