--- a/work/笔记.html
+++ b/work/笔记.html
@@ -22,7 +22,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Class</h1>
-            <h2>Writing</h2>
+            <h2>class table</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -55,7 +55,7 @@
             <p>笔记</p>
           </span>
           <span class="ribbon-inner" id="myTable">
-            <p>个人课表</p>
+            <p>李佳慧的课表</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
