--- a/work/李佳慧的课表.html
+++ b/work/李佳慧的课表.html
@@ -39,7 +39,7 @@
 
 
       <section id="class_table">
-      <h1 class="center">THIS CLASSROOM</h1>
+      <h1 class="center">李佳慧个人课表</h1>
       <table id="this_table">
         <tr>
           <th><p>一</p></th>
@@ -100,7 +100,7 @@
 
   </div>
   <script type="text/javascript" src="jquery/1.9.1/jquery.js"></script>
-  <script type="text/javascript" src="js/shijian.js"></script>
+  <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="userinfo.js"></script>
   <script type="text/javascript" src="xinjiaoshikebiao.js"></script>
   <script type="text/javascript" src="js/read.js"></script>
