--- a/work/笔记.html
+++ b/work/笔记.html
@@ -39,44 +39,8 @@
 
 
       <section id="class_table">
-      <h1 class="center">THIS CLASSROOM</h1>
-      <table id="this_table">
-        <tr>
-          <th><p>一</p></th>
-          <th><p>二</p></th>
-          <th><p>三</p></th>
-          <th><p>四</p></th>
-          <th><p>五</p></th>
-        </tr>
-        <tr>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-        </tr>
-        <tr>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-        </tr>
-        <tr>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-        </tr>
-        <tr>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-          <td><p>NULL</p></td>
-        </tr>
-      </table>
+      <h1 class="center">笔记</h1>
+      <textarea class="bj" placeholder="可以记笔记了"></textarea>
       </section>
 
       <footer>
@@ -100,7 +64,6 @@
 
   </div>
   <script type="text/javascript" src="jquery/1.9.1/jquery.js"></script>
-  <script type="text/javascript" src="js/shijian.js"></script>
   <script type="text/javascript" src="userinfo.js"></script>
   <script type="text/javascript" src="xinjiaoshikebiao.js"></script>
   <script type="text/javascript" src="js/read.js"></script>
